[package]
name = "rusteth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.22"
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
eyre = "0.6.8"
hex = "0.4.3"
tokio = { version = "1.21.1", features = ["full"] }
